uplift to Java 11